display list of product

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,6 @@
 <ul>
-  <li *ngFor="let product of products[]">
+  <li *ngFor="let product of products">
+    {{product.albumName}}
 
   </li>
 </ul>
